# dataleek

./: Makefile  pelicanconf.py  publishconf.py  pyproject.toml  tasks.py
content/: 2015_04_29_twitter_unrest.md  2017_10_24_osfork.md
output/: a-quick-guide-to-forking-in-python.html  archives.html  authors.html  categories.html  index.html  tags.html  twitter-civil-unrest-analysis-with-apache-spark.html
output/author/: zoe-farmer.html
output/category/: data-science.html  python.html
