[tool.poetry]
name = "dataleek"
version = "0.1.0"
description = ""
authors = ["Zoe Farmer <zoe@dataleek.io>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.3.0"
pelican = {extras = ["markdown"], version = "^4.7.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
